--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 aiohttp==3.9.5
 pytest==8.2.2
 requests==2.32.3
+cv2==4.8.1
+easyocr==1.7.1
+numpy==1.26.4
+ultralytics==8.2.32
+pillow==10.2.0
+matplotlib==3.9.0
